Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="company.css">
-<link rel="stylesheet" type="text/css" href="engineering-department.css">
-<link rel="stylesheet" type="text/css" href="project-x-launch.css">
-<link rel="stylesheet" type="text/css" href="typography.css">
+  <meta charset="UTF-8">
+    <meta name="description" content="UT">
+    <meta name="keywords" content="cats, kittens, felines, lions, tigers">
+    <meta name="author" content="Perry">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" type="text/css" />
+    <title>Cat Perry's Favorite Cats</title>
 </head>
 <body>
 </body>
